fix: Update MDX syntax in docs to fix build errors with mdxTextExpression nodes

--- a/docs/node/pages/advanced/performance-profiler.mdx
+++ b/docs/node/pages/advanced/performance-profiler.mdx
@@ -3,6 +3,8 @@ title: Performance & Profiler
 description: How to measure EVM performance with Tevm Node
 ---
 
+import { Steps, Step } from "vocs/components";
+
 import { Callout, Steps, Step, Button } from 'vocs/components'
 
 # Performance & Profiler
