--- a/docs/node/pages/api/whatsabi-integration.mdx
+++ b/docs/node/pages/api/whatsabi-integration.mdx
@@ -3,7 +3,7 @@ title: Contract Loader
 description: Access contract ABIs and bytecode from on-chain contracts through Tevm's Contract Loader functionality
 ---
 
-import { Callout, Steps } from "vocs/components";
+import { Callout, Steps, Step } from "vocs/components";
 import { TabGroup } from "../../../components";
 
 # Contract Loader
