--- a/docs/node/pages/core/create-tevm-node.mdx
+++ b/docs/node/pages/core/create-tevm-node.mdx
@@ -3,6 +3,8 @@ title: Creating a Tevm Node
 description: Learn how to create and configure a Tevm Node
 ---
 
+import { Steps, Step } from "vocs/components";
+
 import { Callout, Steps, Step } from 'vocs/components'
 
 # Creating a Tevm Node
