--- a/docs/node/pages/examples/ethers.mdx
+++ b/docs/node/pages/examples/ethers.mdx
@@ -6,6 +6,8 @@ authors:
   - "[Tevm Team](https://github.com/evmts)"
 ---
 
+import { Steps, Step } from "vocs/components";
+
 import { Callout, Steps, Step, Button } from 'vocs/components'
 import { Tab, TabGroup, Card, CardGrid } from '../../../components'
 
