--- a/docs/node/pages/introduction/why-run-ethereum-in-js.mdx
+++ b/docs/node/pages/introduction/why-run-ethereum-in-js.mdx
@@ -6,7 +6,7 @@ authors:
   - "[Tevm Team](https://github.com/evmts)"
 ---
 
-import { Callout, Steps, Button } from "vocs/components";
+import { Callout, Steps, Button, Tabs, Tab, Step } from "vocs/components";
 import { Card, TabGroup, FileTree } from "../../../components";
 
 # Why Run Ethereum in JavaScript?
