--- a/docs/node/pages/reference/bundler.mdx
+++ b/docs/node/pages/reference/bundler.mdx
@@ -3,13 +3,15 @@ title: Bundler Reference
 description: A reference guide to Tevm's bundler functionality
 ---
 
+import { Callout } from "vocs/components";
+
 # Tevm Contract Bundler
 
 The Tevm Contract Bundler allows you to import Solidity files directly into your TypeScript code, enabling a seamless development experience with type safety and IDE integration.
 
-:::note
+<Callout type="note">
 This page has been split into smaller, more manageable sections. Please visit the new [Bundler Reference](/reference/bundler/) for the updated documentation.
-:::
+</Callout>
 
 ## Quick Navigation
 
