--- a/docs/node/pages/advanced/custom-precompiles.mdx
+++ b/docs/node/pages/advanced/custom-precompiles.mdx
@@ -3,6 +3,8 @@ title: Custom Precompiles
 description: Extend EVM with JavaScript-based precompile at a given address
 ---
 
+import { Steps, Step } from "vocs/components";
+
 import { Callout, Steps, Step, Button } from 'vocs/components'
 
 # Custom Precompiles
